# imagedata_registration

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  techstack.md  techstack.yml  tox.ini
.github/workflows/: build_wheels.yml  python-package.yml  python-package.yml.old  upload_testpypi.yml
NPreg/: multigrid_nonlin_cupy.py  multigrid_nonlin_highlevel.py  multigrid_nonlin_pythran.py
build_tools/wheels/: build_wheels.sh
docs/: FSL.rst  ITKElastix.rst  NPreg.rst  SimpleElastix.rst  index.rst
src/NPreg/: __init__.py  multigrid_nonlin_cupy.py  npreg.py
src/imagedata_registration/: __init__.py
src/imagedata_registration/Elastix/: __init__.py
src/imagedata_registration/FSL/: __init__.py
src/imagedata_registration/NPreg/: __init__.py  multigrid_nonlin.py  multigrid_nonlin_cc.pyx  multigrid_nonlin_cupy.py  multigrid_nonlin_cy.pyx  multigrid_nonlin_highlevel.py  navlam_nonlinear_highlevel_cupy.py  resize.py
tests/: test.py  test_elastix.py  test_fsl.py  test_npreg.py
