[metadata]
name = imagedata_registration
version = file: VERSION.txt
license = MIT
license_files = LICENSE
author = Erling Andersen
author_email = Erling.Andersen@Helse-Bergen.NO
description = Image registration routines for Imagedata
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/erling6232/imagedata_registration
project_urls =
        Documentation = https://imagedata_registration.readthedocs.io
        Source Code = https://github.com/erling6232/imagedata_registration
keywords =
    python
    medical
    imaging
classifiers =
        Programming Language :: Python :: 3
        Development Status :: 4 - Beta
        Environment :: Other Environment
        Intended Audience :: Developers
        Intended Audience :: Healthcare Industry
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Scientific/Engineering :: Medical Science Apps.

[bdist_wheel]
universal=0

[options]
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.8,<3.12
install_requires =
    imagedata>=3.0.0
ext_modules =
    cythonize("NPreg/*.pyx")

[options.packages.find]
where = src

[coverage:run]
branch = True

[coverage:paths]
source =
   imagedata_registration

[coverage:report]
show_missing = True

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .tox, .eggs, .coveragerc, __pycache__, tests/, docs/, build/, dist/, data/
